@@ -4,14 +4,13 @@ planned features
 
 tasks (marked with * are necessary for next release)
  [ 1 ] configure flag to turn off gui and/or instrumentation and/or memory hooks
- [*5 ] add value description to call graph
  [*6 ] finish website
  [ 1 ] make highrestimer clock configurable
  [ 4 ] profile different methods of hook activation / deactivation
  [ 2 ] sort inner output in call graph
  [ 3 ] function traversation is too slow.
  [ 4 ] tracing lib is proably too slow as well
- [*2 ] include grapes in graprof - does not make sense yet to separate these
+ [ 1 ] remove fprintf cascades in favour of constant string macros
 
 questions
  [ 5 ] Why does addr2line do some black magic on elf addresses
